Added foundation for tests

--- a/beretained-processor/build.gradle
+++ b/beretained-processor/build.gradle
@@ -7,4 +7,6 @@ dependencies {
 
     compile project(':beretained-annotations')
     compile 'com.google.auto.service:auto-service:1.0-rc2'
+
+    testCompile 'junit:junit:4.12'
 }
