--- a/beretained-processor/build.gradle
+++ b/beretained-processor/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     compile project(':beretained-annotations')
     compile 'com.google.auto.service:auto-service:1.0-rc2'
+    compile 'com.squareup:javapoet:1.7.0'
 
     testCompile 'junit:junit:4.12'
 }
