--- a/example/build.gradle
+++ b/example/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.woodblockwithoutco.beretained"
+        applicationId "com.woodblockwithoutco.beretainedexample"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:support-annotations:23.4.0'
 
+    compile project(':beretained-android')
     compile project(':beretained-annotations')
     apt project(':beretained-processor')
 }
