--- a/beretained-android/build.gradle
+++ b/beretained-android/build.gradle
@@ -1,20 +1,85 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
+version = "0.1"
+group = 'com.woodblockwithoutco'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    resourcePrefix "wooodblock_beretained__"
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 4
         targetSdkVersion 23
+        versionCode 1
+        versionName version
     }
+
     buildTypes {
-        release {
-            minifyEnabled false
-        }
     }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
+}
+
+install {
+    repositories.mavenInstaller {
+        pom {
+            project {
+                packaging 'aar'
+
+                name 'Simple library to help retaining non-Parcelable objects during Activity configuration change'
+                url project.siteUrl
+
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'DrBreen'
+                        name 'Alexander Leontev'
+                        email 'wryyy906@gmail.com'
+                    }
+                }
+                scm {
+                    connection project.gitUrl
+                    developerConnection project.gitUrl
+                    url project.siteUrl
+
+                }
+            }
+        }
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+task androidJavadocs(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += fileTree(dir: "$buildDir/intermediates/exploded-aar/", include:"**/classes.jar")
+}
+
+task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+    classifier = 'javadoc'
+    from androidJavadocs.destinationDir
+}
+
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+    archives androidSourcesJar
+    archives androidJavadocsJar
 }
