--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,15 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
+}
+
+project.ext {
+    siteUrl = 'https://github.com/DrBreen/beretained'
+    gitUrl = 'https://github.com/DrBreen/beretained.git'
 }
 
 allprojects {
@@ -19,3 +27,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
