Renamed module beretained-android to beretained

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':example', ':beretained-annotations', ':beretained-processor', ':beretained-android'
+include ':example', ':beretained-annotations', ':beretained-processor', ':beretained'
