--- a/example/build.gradle
+++ b/example/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:support-annotations:23.4.0'
 
-    compile project(':beretained-android')
+    compile project(':beretained')
     compile project(':beretained-annotations')
     apt project(':beretained-processor')
 }
