--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '23.0.2'
 
     defaultConfig {
-        applicationId "com.woodblockwithoutco.beretainedexample"
+        applicationId 'com.woodblockwithoutco.beretainedexample'
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName '1.0'
     }
     buildTypes {
         release {
