--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
@@ -7,20 +5,28 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
-
 
 project.ext {
     siteUrl = 'https://github.com/DrBreen/BeRetained'
     gitUrl = 'https://github.com/DrBreen/BeRetained.git'
     gitIssueTrackerUrl = 'https://github.com/DrBreen/BeRetained/issues'
+    gitRepo = 'DrBreen/BeRetained'
+    gitReleaseNotes = 'README.md'
 
-    libVersion = '0.1'
-    libBuildNumber = 2
+    libVersion = '0.1.1'
+    libVersionCode = 3
     libGroup = 'com.woodblockwithoutco'
+
+    developerId = 'DrBreen'
+    developerName = 'Alexander Leontev'
+    developerEmail = 'wryyy906@gmail.com'
+
+    libLicenseName = 'The Apache Software License, Version 2.0'
+    libLicenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
 }
 
 allprojects {
