--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
+sourceCompatibility = project.sourceCompatibility
+targetCompatibility = project.targetCompatibility
+
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
@@ -14,8 +17,6 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
