--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
-# Project-wide Gradle settings.
+SITE_URL=https://github.com/DrBreen/BeRetained
+GIT_URL=https://github.com/DrBreen/BeRetained.git
+ISSUE_TRACKER_URL=https://github.com/DrBreen/BeRetained/issues
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+GIT_REPO=DrBreen/BeRetained
+GIT_RELEASE_NOTES=README.md
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+VERSION=0.1.1
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+GROUP=com.woodblockwithoutco
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+DEVELOPER_ID=DrBreen
+DEVELOPER_NAME=Alexander Leontev
+DEVELOPER_EMAIL=wryyy906@gmail.com
+
+LICENSE_NAME=The Apache Software License, Version 2.0'
+LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+
+REPO=maven
