--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-include ':example', ':beretained-annotations', ':beretained-processor', ':beretained'
+include ':example'
+include ':beretained-annotations'
+include ':beretained-processor'
+include ':beretained'
