--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ ISSUE_TRACKER_URL=https://github.com/DrBreen/BeRetained/issues
 GIT_REPO=DrBreen/BeRetained
 GIT_RELEASE_NOTES=README.md
 
-VERSION=0.1.1
+VERSION=0.1.2-DEV
 
 GROUP=com.woodblockwithoutco
 
